fix: table whitespaces

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -46,3 +46,7 @@ input:-webkit-autofill {
 .n-data-table-th__title {
   user-select: none;
 }
+
+.table-col {
+  white-space: normal;
+}
